/**
 * MBEA Algorithm
 * @author Hadi Sanaei
 * @version 1.1
 * @date 00/06/2019
 */
 
 
 public class Mbea{
 
 
 
 }
