package graphs;

import java.util.Set;

/**
 * Bicliques
 *
 */
public class Biclique {
    private Graph graph;
    private Set<Graph.Vertex> left;
    private Set<Graph.Vertex> right;



}
